Added Category Model and EF Core

--- a/SmpProject.MVC/appsettings.json
+++ b/SmpProject.MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "eBookAppDatabase": "Server=CUNEYT\\MSSQLLOCALDB;Database=eBookAppDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
