added CategoryController and CRUD operations.

--- a/SmpProject.MVC/appsettings.json
+++ b/SmpProject.MVC/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "eBookAppDatabase": "Server=CUNEYT\\MSSQLLOCALDB;Database=eBookAppDB;Trusted_Connection=True;TrustServerCertificate=True"
+    "eBookAppDatabase": "Server=CUNEYT\\MSSQLLOCALDB;Database=eBookAppDB;Trusted_Connection=True;TrustServerCertificate=True" // Connection string for SQL Server database
   },
   "Logging": {
     "LogLevel": {
